# x5-valarray

./: .dir-locals.el  CMakeLists.txt  LICENSE  README.md  x5-valarray.h
test/: r.cpp
